welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: Missing closing brace `}' assumed here
var fini:Boolean = false;
^BDR2:24: error: ';' expected but 'else' found.
		else 
                ^